@@ -363,6 +363,7 @@ class RollbackCommand(ConaryCommand):
         ConaryCommand.addParameters(self, argDef)
         argDef["just-db"] = NO_PARAM
         argDef["replace-files"] = NO_PARAM
+        argDef["info"] = NO_PARAM
         argDef["tag-script"] = ONE_PARAM
 
     def runCommand(self, cfg, argSet, otherArgs):
@@ -373,6 +374,7 @@ class RollbackCommand(ConaryCommand):
 
         kwargs['tagScript'] = argSet.pop('tag-script', None)
         kwargs['justDatabase'] = argSet.pop('just-db', False)
+        kwargs['showInfoOnly'] = argSet.pop('info', False)
 
         kwargs['callback'] = updatecmd.UpdateCallback(cfg)
         if argSet or len(otherArgs) != 3: return self.usage()
